@@ -10,7 +10,7 @@ sinclude(tcljava.m4)
 #--------------------------------------------------------------------
 # 	Version identification info (also set in source files)
 #--------------------------------------------------------------------
-TCLJAVA_VERSION=1.3.2
+TCLJAVA_VERSION=1.4.0
 TCLJAVA_NODOT_VERSION=`echo $TCLJAVA_VERSION | sed -e 's/\.//g'`
 
 # Convert into full path name
